--- a/examples/izkeys-visual-maps-base.html
+++ b/examples/izkeys-visual-maps-base.html
@@ -10,7 +10,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>izKeys layouts: visual diagrams</title>
 <style>
-.klayout { font-family: monospace, sans-serif, serif, DejaVu Sans Mono, junicode, Symbola; }
+.klayout kbd { font-family: monospace, sans-serif, serif, DejaVu Sans Mono, junicode, Symbola; }
 		/* START auto-generated style */
 			/* To be auto-generated */
 /* END auto-generated style */
@@ -25,8 +25,8 @@ How to access the other keys?  The info may be extracted from the
 table summaries of layout of the <a href=coverage-1prefix-Latin.html>Latin</a> and <a href=coverage-1prefix-Cyrillic.html>Cyrillic</a>
 personalities (but these tables do not explicitly list the heuristics…).  For more information, see <a href=http://k.ilyaz.org/iz/windows>this</a> (you may also want to inspect 
 the documentation of the toolset used to generate this layout:
-<a href=http://search.cpan.org/~ilyaz/UI-KeyboardLayout-0.12/lib/UI/KeyboardLayout.pm>here</a>,
-and <a href=http://search.cpan.org/~ilyaz/UI-KeyboardLayout-0.12/lib/UI/KeyboardLayout/izKeys.pod>here</a>, but they
+<a href=http://search.cpan.org/~ilyaz/UI-KeyboardLayout-0.13/lib/UI/KeyboardLayout.pm>here</a>,
+and <a href=http://search.cpan.org/~ilyaz/UI-KeyboardLayout-0.13/lib/UI/KeyboardLayout/izKeys.pod>here</a>, but they
 are currently in a complete disarray).</p>
 
 <p>Here, we completely ignore the questions how to enter math/IPA/UPA symbols (about a thousand is possible!), and exotic Latin
@@ -80,18 +80,17 @@ Sometimes one should better zoom in (<code>Control-MouseWheel</code>, <code>Cont
 
 <h1>The most basic Layout</h1>
 
-<div class=klayout-wrapper>
+<div>
+<div class="klayout-wrapper over-shift-outline">
 <div class=klayout-uc>
-<div class="klayout uclc ddiag" kbd_rebuild="/opt=latinBase +=l,,0">
+<div class="klayout in-wrapper uclc ddiag" kbd_rebuild="/opt=latinBase +=l,,0">
 			/* To be auto-generated */
 </div>  <!-- Cannot match the width of the bottom row exactly — probably due to rounding to 1px??? -->
-<div class=klayout-shift-switcher>
-Hover mouse here to switch to “Shifted” view 
+<div class="klayout-shift-switcher zero btm r"><div class=over-shift></div></div>
 </div>
+<div class="klayout-shift-switcher zero btm l"><div class=over-shift></div></div>
 </div>
-<div class=klayout-shift-switcher>
-Hover mouse here to switch to “Unshifted” view 
-</div>
+Hover mouse over left/right Shift to switch to “Un-shifted”/“Shifted” view; press key to flip.
 </div>
 
 <p>Note that each colored letter-diagonal contains exactly one vowel (outlined in blue); the diagonals guide the quick-access to the
@@ -113,7 +112,7 @@ sometimes it is marked as <code>&lt; &gt;</code>; sometimes it is positioned to 
 of <code>Z</code>; on many US keyboards it is omitted altogether.  These
 variations in position and markup do not matter — if the key is present, it behaves
 as indicated; we do not put “important” characters at this position.  Likewise,
-<a href="http://en.wikipedia.org/wiki/Portuguese_alphabet#Keyboard_layout">Brazilian ABNT</a> and
+<a href="http://en.wikipedia.org/wiki/Portuguese_keyboard_layout">Brazilian ABNT</a> and
 <a href="http://en.wikipedia.org/wiki/Keyboard_layout#Japanese">Japanese JIS</a> keyboards have
 yet another key on alphanumeric rows: on ABNT it is next to the right <code>Shift</code>, on JIS next to <code>Backspace</code>.
 (Our diagrams do not show this key at all; for this layout, we do not plan to use it other than as <code>Compose</code> key.)</p>
@@ -237,9 +236,18 @@ knowing how the priority is assigned to letters; this is explained near the diag
 <code>AltGr</code>-bindings added in red.  These second-class citizens are from the modern Slavic Cyrillic-based languages, 
 XIX century Russian, and Kazakh:
 
-<div class="klayout uclc do-alt alt2 base-center large-base" kbd_rebuild="/opt=cyr +base=l,,0 on-right+=c,,1 on-left+=c,,0">
+<div>
+<div class="klayout-wrapper over-shift-outline">
+<div class="klayout-uc do-alt">
+<div class="klayout in-wrapper uclc do-alt alt2 base-center large-base" kbd_rebuild="/opt=cyr +base=l,,0 on-right+=c,,1 on-left+=c,,0">
 			/* To be auto-generated */
 </div>  <!-- Cannot match the width of the bottom row exactly — probably due to rounding to 1px??? -->
+<div class="klayout-shift-switcher zero btm r"><div class=over-shift></div></div>
+</div>
+<div class="klayout-shift-switcher zero btm l"><div class=over-shift></div></div>
+</div>
+Hover mouse over left/right Shift to switch to “Un-shifted”/“Shifted” view; press key to flip.
+</div>
 
 <p>Color codes are as above; positions of the letters Ѣ,Є,Ә are artificial,
 but still may be guessed on the third try, while positions of Ѓ and Ј must be memorized (heuristics:
@@ -594,7 +602,8 @@ faces” (MathBlue, Business, negation etc).  The personalities are ordered as L
 
 <p>Repeated <code>Green</code> accesses: (×2) MathBlue, (×3) Business, (×4) Coptic.  ×3-Repeated <code>Ripe</code>
 accesses the “extras” <code>Cyrillic'</code>-face.  As an added convenience, the base layer of the <code>Green</code> face is also 
-accessible via combining keyspresses with <code>Application-Menu</code> modifier key (this enters base Latin or base Greek).</p>
+accessible via combining keyspresses with <code>Application-Menu</code> modifier key (this enters base Latin or base Greek).
+(Unfortunately, only the Base- and <code>AltGr</code>-layers are controlled by the <code>CapsLock</code>.)</p>
 
 <p>On symbol positions, the <code>Green</code> and <code>Ripe</code> faces differ from the scripts personality's faces: the
 keys identical to the current script's keys (automatically non-alphabetical!) are replaced by special <code>GreenKeys</code> and 
@@ -630,7 +639,27 @@ parentheses in between Hebrew letters are
 are typeset in the right-to-left order</a>); and then 
 most probably the application will take them from different fonts — and even if taken from the same font, they may have very 
 different shapes/sizes since symbols are made look good when surrounded by Latin characters.  Another comparison: ℵ₀, ℵ₁ vs.
-א₀ א₁.</p>
+א₀, א₁.  (Both examples are entered as: ALEPH₀, ALEPH₁.)</p>
+
+<h1>Extras of <code>Application-Menu</code> modifier</h1>
+
+<p>First of all, the base layer of the <code>Green</code> face is also 
+accessible via combining keyspresses with <code>Application-Menu</code> modifier key (this enters base Latin or base Greek).
+(Unfortunately, <code>CapsLock</code> is ignored for these keys.)  Second, arrows may be entered by combining this modifier
+with 8 “direction keys” (arrows etc) on the numeric keypad.  <code>Shift</code> makes double-arrows; the wide key and
+the high key (<code>0 Ins</code> and <code>Enter</code>) make double-sided arrows; the key in between (<code>. Del</code>)
+makes a long right arrow.  One can use also “islands” synonims of these keys.</p>
+
+<p>Third, the arithmetic operation keys on the numeric keypad are modified to become “elementary school” variants (÷×), or
+with <code>Shift</code>, “operator” variants (<code>+</code> has no operator variant, so it becomes ∑).  Since
+<code>−</code> and <code>+</code> have no “elementary school” variants, these keys produce digit-wide dash, and
+Hebrew “elementary school” plus ﬩.</p>
+
+<p>Lastly, several multi-character strings may be inserted (the current key assignment is random, and selected
+to simplify debugging of keyboard input in applications).  Two variants of m-dash surrounded by tiny whitespace
+are provided: one with narrowest whitespace is on <code>F2</code> and <code>comma</code>, and one with
+slightly wider whitespace is on <code>Shift-F2</code>.  One-character long Plane1 string is on <code>&lt;</code>,
+and two-character long Plane1 string is on <code>&gt;</code>; they enter 𝄞 and 𝄡𝄡.</p>
 
 </body>
 </html>
