--- a/examples/izkeys-visual-maps-base.html
+++ b/examples/izkeys-visual-maps-base.html
@@ -714,7 +714,8 @@ are more “mathematical” when <code>RipeKeys</code> are more “typographical
 
 <a name=math-blue></a>
 <p>See <a href=#greenEx>example of <code>GreenKeys</code></a>, <a href=#ripeEx>of <code>RipeKeys</code></a>.
-Below is the <code>MathBlue</code> face (which combines <code>BlueKeys</code> and math letters) as visible from Latin personality:</p>
+Below is the <code>MathBlue</code> face (which combines <code>BlueKeys</code> [with blue frames], “operators”, math letters, and a few
+“random” characters) as visible from Latin personality:</p>
 
 <div class="rtl-hover klayout uclc do-alt alt2 base-center large-base" kbd_rebuild="/opt=0 +base=l,,0 on-left+=l,019c,0 on-right+=l,019c,1">
 			/* To be auto-generated */
@@ -814,7 +815,17 @@ for math bold italic (𝒒𝒘𝒆𝒓𝒕𝒚/𝑸𝑾𝑬𝑹𝑻𝒀),  <code
 due to a Windows bug with column number 15 in the keyboard description table),  <code>lAlt-Mnu</code> for math monospace
 (𝚚𝚠𝚎𝚛𝚝𝚢/𝚀𝚆𝙴𝚁𝚃𝚈/𝟷𝟸𝟹𝟺; apparently, it is not working with the applications I checked).  (Here <code>Mnu</code>
 is a shortcut for <code>ApplicationMenu</code>.  Out of math flavors, we picked up those most frequently seen, and those most 
-visually different from the text flavor.)
+visually different from the text flavor.)  <b>Trivia:</b> International standard <a href=http://mirrors.ctan.org/macros/latex/contrib/isomath/isomath.pdf>layout rules are</a>
+
+<ul><li>The overall rule is that symbols representing physical quantities (or variables)
+are italic, but symbols representing units, or labels, are roman.
+<li>
+Symbols for vectors and matrices are bold italic, symbols for tensors are sans-
+serif bold italic.
+<li>
+The above rules apply equally to letter symbols from the Greek and the Latin
+alphabet.
+</ul>
 
 <a name=compose-key></a><h1>Extras: using <code>Compose</code> key</h1>
 
@@ -857,7 +868,7 @@ the bulk repertoir of available characters.  This means that a significant numbe
 available via very easy to remember access rules (no matter whether the access is ergonomic).
 Then the more one is ready to memorize, the more ergonomic the layout becomes.<span style="margin-bottom: 16em"></span>
 
-<br>This means that many characters should be accessibe in a whole scale of different heuristics.  The scale
+<br>This means that many characters should be accessible in a whole scale of different heuristics.  The scale
 goes from easy to remember but not ergonomic to the opposite.
 
 <li>Have most (70%–80% achievable?) of covered characters available in easy-to-remember positions.</li>
